--- a/pom.xml
+++ b/pom.xml
@@ -17,15 +17,13 @@
 	</repositories>
 	<dependencyManagement>
 		<dependencies>
-
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
-			<groupId>jdk.tools</groupId>
-			<artifactId>jdk.tools</artifactId>
-			<version>1.7</version>
-			<scope>provided</scope>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging-spi</artifactId>
+			<version>2.1.2.GA</version>
 		</dependency>
 		<!-- Riak -->
 		<dependency>
@@ -66,6 +64,12 @@
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase</artifactId>
 			<version>${hbase.version}</version>
+		</dependency>
+		<!-- Apache Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.7.7</version>
 		</dependency>
 	</dependencies>
 	<build>
