--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.scinovaconsulting</groupId>
+	<groupId>com.polygot</groupId>
 	<artifactId>polygot-persistence</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description></description>
 	<properties>
 		<hbase.version>0.90.4-cdh3u2</hbase.version>
+		<hadoop.version>2.5.2</hadoop.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -21,9 +22,14 @@
 	</dependencyManagement>
 	<dependencies>
 		<dependency>
-			<groupId>org.jboss.logging</groupId>
-			<artifactId>jboss-logging-spi</artifactId>
-			<version>2.1.2.GA</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.1</version>
 		</dependency>
 		<!-- Riak -->
 		<dependency>
@@ -51,13 +57,14 @@
 		<!-- Hadoop -->
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-common</artifactId>
-			<version>2.6.0</version>
+			<version>${hadoop.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>jdk.tools</groupId>
+					<artifactId>jdk.tools</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- HBase -->
 		<dependency>
@@ -83,4 +90,22 @@
 			</resource>
 		</resources>
 	</build>
+	<profiles>
+		<profile>
+			<id>unix</id>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.hadoop</groupId>
+					<artifactId>hadoop-common</artifactId>
+					<version>${hadoop.version}</version>
+					<exclusions>
+						<exclusion>
+							<groupId>jdk.tools</groupId>
+							<artifactId>jdk.tools</artifactId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
