--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,19 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description></description>
+	<!-- <hbase.version>0.90.4-cdh3u2</hbase.version> -->
 	<properties>
-		<hbase.version>0.90.4-cdh3u2</hbase.version>
+		<hbase.version>0.98.8-hadoop2</hbase.version>
 		<hadoop.version>2.5.2</hadoop.version>
 	</properties>
 	<repositories>
-		<repository>
+		<!-- repository>
 			<id>CDH Releases and RCs Repositories</id>
 			<url>https://repository.cloudera.com/content/groups/cdh-releases-rcs</url>
+		</repository -->
+		<repository>
+			<id>Apache</id>
+			<url>https://repo1.maven.org/maven2</url>
 		</repository>
 	</repositories>
 	<dependencies>
@@ -65,7 +70,12 @@
 		<!-- HBase -->
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
-			<artifactId>hbase</artifactId>
+			<artifactId>hbase-common</artifactId>
+			<version>${hbase.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-client</artifactId>
 			<version>${hbase.version}</version>
 		</dependency>
 		<!-- Apache Avro -->
