--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.polygot</groupId>
 	<artifactId>polygot-persistence</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 	<description></description>
-	<!-- <hbase.version>0.90.4-cdh3u2</hbase.version> -->
 	<properties>
 		<hbase.version>0.98.8-hadoop2</hbase.version>
 		<hadoop.version>2.5.2</hadoop.version>
